# Bezpieczenstwo-systemow-rozproszonych

./: .coverage  .env.example  .gitignore  Dockerfile.api  Makefile  README.md  comands.md  docker-compose.override.tls.example.yml  docker-compose.yml  old_main.py  pytest.ini  requirements-api.txt  requirements-gui.txt  requirements-security.txt  requirements.txt  run.ps1  run.py  sonar-project.properties  strategia_testowania.md  test.db  test_users.md
VetClinic/: __init__.py  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  schema.sql  test.db
VetClinic/API/: README.md  alembic.ini  pyproject.toml  seed_validated_data.py  setup.py  test.db  vetclinic.db
VetClinic/API/alembic/: env.py
VetClinic/API/tests/: __init__.py  conftest.py  test_appointments.py  test_auth.py  test_blockchain.py  test_config.py  test_crud.py  test_database.py  test_medical_records.py  test_routers.py  test_security.py  test_services.py  test_users.py
VetClinic/API/vetclinic_api/: main.py  models_blockchain.py  security_mode.py
VetClinic/GUI/: README.md  __init__.py  bft_api_client.py  bft_dashboard.py  bft_qt.py  bft_widgets.py  main.py  run_bft_dashboard.py  setup.py
VetClinic/GUI/Widgets/: smooth_chart_view.py
VetClinic/GUI/services/: animal_service.py
VetClinic/GUI/tests/: test_admin.py  test_auth.py  test_client.py  test_doctor.py  test_main.py  test_receptionist.py  (+1 more)
VetClinic/alembic/: env.py
VetClinic/app/: main.py
VetClinic/tests/: conftest.py  test.db  test_animals.py  test_appointments.py  test_auth.py  test_database.py  test_users.py
(+386 files in other folders)
